--- a/properties/config-client-dev.properties
+++ b/properties/config-client-dev.properties
@@ -1,5 +1,5 @@
 foo = foo version 4
-democonfigclient.message=hello spring io
+democonfigclient.message=hello spring test
 
 # routes to serviceId
 # routes to url
