--- a/properties/config-client-dev.properties
+++ b/properties/config-client-dev.properties
@@ -1,5 +1,5 @@
 foo = foo version 4
-democonfigclient.message=hello
+democonfigclient.message=hello spring
 
 # routes to serviceId
 # routes to url
