--- a/properties/config-client-dev.properties
+++ b/properties/config-client-dev.properties
@@ -1,5 +1,5 @@
 foo = foo version 4
-democonfigclient.message=spring cloud Greenwich.SR3
+democonfigclient.message=hello spring cloud Greenwich.SR3
 
 # routes to serviceId
 # routes to url
